--- a/java-lang-boot/app/src/main/resources/static/lang/variable/exam4/test1.html
+++ b/java-lang-boot/app/src/main/resources/static/lang/variable/exam4/test1.html
@@ -4,8 +4,8 @@
 <meta charset="UTF-8">
 <title>변수 활용</title>
 </head>
-<body>
-<h1>계산기2</h1>
+<body> 
+<h1>계산기 : server-side rendering</h1>
 
 <form action = "/lang/variable/exam4/test1">
 <input type = "text"  name = "v1">
@@ -20,12 +20,5 @@
 <button>=</button>
 </form>
 
-<script>
-
-
-
-
-
-</script>
 </body>
 </html>
