--- a/java-lang-boot/app/src/main/resources/static/lang/variable/exam4/test2.html
+++ b/java-lang-boot/app/src/main/resources/static/lang/variable/exam4/test2.html
@@ -4,70 +4,76 @@
 <meta charset="UTF-8">
 <title>변수 활용</title>
 </head>
-<body> 
-<h1>계산기 : client - side rendering</h1>
+<body>
 
+<h1>계산기 : client-side rendering</h1>
 <form>
-<input type = "text"  name = "v1">
-<select name = "op">
-<option>+</option>
-<option>-</option>
-<option>*</option>
-<option>/</option>
-<option>%</option>
+<input type="text" name="v1">
+<select name="op">
+  <option>+</option>
+  <option>-</option>
+  <option>*</option>
+  <option>/</option>
+  <option>%</option>
 </select>
-<input type = "text" name = "v2">
-<button type = "button" id ="x-btn">=</button>  <!-- 버튼의 타입 지정하지 않으면 기본타입은 submit -->
-<input id = "x-result" type = "text"> 
+<input type="text" name="v2">
+<button type="button" id="x-btn">=</button>
+<input id="x-result" type="text">
 </form>
 
 <script>
 // 입력폼의 각 태그를 찾는다.
-var xV1 = document.querySelector("input[name= 'v1']"); //css에서 태그를 찾을 때 사용하는 문법); 
-var xV2 = document.querySelector("input[name= 'v2']"); // input = 태그 이름, type = 속성(attribute)
-var xOp = document.querySelector("select[name= 'op']");// 셀렉 태그중에 속성값이 op인것을 찾아라.
-var xBtn = document.querySelector("#x-btn"); 
-var xResult = document.querySelector("#x-result"); 
+var xV1 = document.querySelector("input[name='v1']");
+var xV2 = document.querySelector("input[name='v2']");
+var xOp = document.querySelector("select[name='op']");
+var xBtn = document.querySelector("#x-btn");
+var xResult = document.querySelector("#x-result");
 
+// 버튼을 클릭하면 웹브라우저에서 별도의 요청을 수행한다.
 
-
-// 버튼을 클릭하면 웹 브라우저에서 별도의 요청을 수행한다. 
-
-
-//1) 버튼을 클릭했을 때 수행할 작업을 등록한다. 
-// querySelector 는 태그를 찾는다.
-  
- xBtn.onclick = function() {
-	 
+// 1) 버튼을 클릭했을 때 수행할 작업을 등록한다.
+xBtn.onclick = function() {
 	
- // 서버에 요청할 때 사용할 도구를 준비한다.
- var xhr = new XMLHttpRequest(); // XMLHttpRequest =XHR
- 
- // 서버에서 응답을 받았을 때(load 이벤트 발생) 호출될 함수를 등록한다.
- //xhr.addEventListener(이벤트명, 호출될 함수);
- xhr.addEventListener("load", function() {  //이벤트가 발생됐을 때  : addEvent로 함수를 호출함
-	 xResult.value = xhr.responseText;
- });
- 
- // 서버와 연결한다.
- // 주의! 웹브라우저에서 직접 요청할 때는 URL인코딩 필요 X (웹 브라우저가 알아서 URL 인코딩 수행하기 때문)
- // 자바스크립트를 이용해서 요청할 때는 개발자가 직접 URL인코딩을 해야 한다.
- // 즉 URL인코딩을 하지 않았을 때 문제가 발생할 문자에 대해 반드시 URL 인코딩을 처리해야 한다.
- // encodeURIComponent(문자열) -> URL에서 URL인코딩이 필요한 문자를 처리해주는 문법.
- 
- xhr.open(
-		 "GET",  //HTTP 요청 방식
-		 "/lang/variable/exam4/test2?v1="+xV1.value + " &v2=" +xV2.value + " &op=" + encodeURIComponent(xOp.value),  // 요청 URL
-			true); // 비동기 여부 지정
-			
-			// 서버에 요청 정보를 보낸다.
-			xhr.send(); 
- 
- };
-
-
-
-
+  // 서버에 요청할 때 사용할 도구를 준비한다.
+  var xhr = new XMLHttpRequest();
+  
+  // 서버에서 응답을 받았을 때(load 이벤트 발생) 호출될 함수를 등록한다.
+  xhr.addEventListener("load", function() {
+    xResult.value = xhr.responseText;
+  });
+  
+  // 서버와 연결한다.
+  // 주의!
+  // - 웹브라우저에서 직접 요청할 대는 'URL 인코딩'을 따로 처리하지 않아도 된다.
+  //   왜? 웹브라우저가 알아서 URL 인코딩을 해준다.
+  // - 자바스크립트를 이용해서 요청할 때는 개발자가 직접 'URL 인코딩'을 처리해야 한다.
+  //   즉 URL 인코딩을 하지 않았을 때 문제가 발생할 문자에 대해 반드시 URL 인코딩을 처리해야 한다.
+  //
+  //     encodeURIComponent(문자열)   
+  //     ==> 한글 뿐만 아니라 URL에서 특별한 의미로 사용되는 문자(?,+,# 등)도 URL 인코딩한다.
+  // 
+  xhr.open(
+    "GET",  // HTTP 요청 방식
+    "/lang/variable/exam4/test2?v1=" + xV1.value 
+      + "&v2=" + xV2.value
+      + "&op=" + encodeURIComponent(xOp.value),  // 요청 URL 
+    true);  // 비동기 여부 지정
+  
+  // 서버에 요청 정보를 보낸다.
+  xhr.send();
+};
 </script>
+
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
