--- a/java-lang-boot/app/src/main/resources/static/lang/variable/exam4/test3.html
+++ b/java-lang-boot/app/src/main/resources/static/lang/variable/exam4/test3.html
@@ -2,43 +2,44 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>변수활용</title>
+<title>변수 활용</title>
 </head>
 <body>
-<!-- 이름 있어야 보내진다 --> 
+
 <h1>배열 다루기</h1>
-
-<button type = "button" id = "x-btn" onclick = "">배열 가져오기</button>
-<!-- ul : 언 오더드 리스트 -->
-<ul id = "x-namelist"> 
+<button type="button" id="x-btn">배열 가져오기</button>
+<ul id="x-namelist">
 </ul>
-
 
 <script>
 var xNamelist = document.querySelector("#x-namelist");
-var xBtns = document.querySelector("#x-btn") //쿼리 셀렉터는 # 써야한다
+var xBtn = document.querySelector("#x-btn");
 
-// 클릭이벤트가 2개 있을 경우 나중 건이 덮어씀
-// 애드 이벤트 리스너는 덮어쓰지 않고 다 호출한다
-xBtns.addEventListener("click",function() {
-   var xhr = new XMLHttpRequest();
-      xhr.onload = function(){
-      //서버에서 받은 JSON 형식의 배열을 자바스크립트 배열로 변환한다.
-    	  var names = JSON.parse(xhr.responseText);
-      for(var name of names) {
-    	 var li = document.createElement("li");
-    	 li.innerHTML = name;  //innerHTML = 태그 사이의 문자 지정할 때 사용
-    	  xNamelist.appendChild(li);
-      }
-    };
-      xhr.open("Get", "/lang/variable/exam4/test3" ,true);
-      xhr.send()
+xBtn.addEventListener("click", function() {
+  fetch("/lang/variable/exam4/test3")
+    .then(function(response) {
+      return response.json();
+    })
+    .then(function(names) {
+      names.forEach(function(name) {
+        var li = document.createElement("li");
+        li.innerHTML = name;
+        xNamelist.appendChild(li);
+      });
+    });
 });
-
-
 </script>
-
-
 
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
