--- a/java-lang-boot/app/src/main/resources/static/lang/variable/exam4/test3_10.html
+++ b/java-lang-boot/app/src/main/resources/static/lang/variable/exam4/test3_10.html
@@ -8,13 +8,11 @@
 
 <h1>배열 다루기</h1>
 <button type="button" id="x-btn">배열 가져오기</button>
-<ul>
-  <li>홍길동</li>
-  <li>임꺽정</li>
-  <li>유관순</li>
+<ul id="x-namelist">
 </ul>
 
 <script>
+var xNamelist = document.querySelector("#x-namelist");
 var xBtn = document.querySelector("#x-btn");
 
 xBtn.addEventListener("click", function() {
@@ -25,7 +23,7 @@ xBtn.addEventListener("click", function() {
     for (var name of names) {
       var li = document.createElement("li"); // <li></li>
       li.innerHTML = name; // <li>홍길동</li>
-      console.log(li);
+      xNamelist.appendChild(li);
     }
   };
   xhr.open("GET", "/lang/variable/exam4/test3", true);
