--- a/java-lang-boot/app/src/main/resources/static/lang/variable/exam4/test3_5.html
+++ b/java-lang-boot/app/src/main/resources/static/lang/variable/exam4/test3_5.html
@@ -4,9 +4,10 @@
 <meta charset="UTF-8">
 <title>변수 활용</title>
 </head>
-<body> 
+<body>
+
 <h1>배열 다루기</h1>
-<button type = "button" id ="x-btn" onclick="">배열 가져오기</button>  
+<button type="button" id="x-btn">배열 가져오기</button>
 <ul>
   <li>홍길동</li>
   <li>임꺽정</li>
@@ -14,16 +15,28 @@
 </ul>
 
 <script>
-var xBtn = document.querySelector("#x-btn");  //쿼리 셀렉터는 #을 적어야함. getElement 사용할때는 # 안적어도 됨.
+var xBtn = document.querySelector("#x-btn");
 
-xBtn.addEventListener("click", function() {
-	console.log('눌렀음!5')
-});
-xBtn.addEventListener("click", function() {
-	  console.log('눌렀음!6')
-	});
+xBtn.onclick = function() {  
+  console.log('눌렀음4!')
+};
+
+xBtn.onclick = function() {  
+  console.log('눌렀음5!')
+};
 
 </script>
 
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
