--- a/java-lang-boot/app/src/main/resources/static/lang/variable/exam4/test3_6.html
+++ b/java-lang-boot/app/src/main/resources/static/lang/variable/exam4/test3_6.html
@@ -2,40 +2,42 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>변수활용</title>
+<title>변수 활용</title>
 </head>
 <body>
-<!-- 이름 있어야 보내진다 --> 
-<h1>배열 다루기</h1>
 
-<button type = "button" id = "x-btn" onclick = "">배열 가져오기</button>
-<!-- ul : 언 오더드 리스트 -->
-<ul> 
+<h1>배열 다루기</h1>
+<button type="button" id="x-btn">배열 가져오기</button>
+<ul>
   <li>홍길동</li>
   <li>임꺽정</li>
   <li>유관순</li>
 </ul>
 
-
 <script>
-//쿼리 셀렉터는 # 써야한다
-var xBtns = document.querySelector("#x-btn")
+var xBtn = document.querySelector("#x-btn");
 
-// 클릭이벤트가 2개 있을 경우 나중 건이 덮어씀
-// 애드 이벤트 리스너는 덮어쓰지 않고 다 호출한다
-xBtns.addEventListener("click",function() {
-   var xhr = new XMLHttpRequest();
-      xhr.onload = function(){
-         console.log(xhr.responseText)
-      }
-      xhr.open("Get", "/lang/variable/exam4/test3" ,true)
-      xhr.send()
-})
+xBtn.addEventListener("click", function() {
+	console.log('눌렀음6!')
+});
+
+xBtn.addEventListener("click", function() {
+	console.log('눌렀음66!')
+});
 
 
 </script>
 
-
-
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
