--- a/web/app/src/main/resources/static/javascript/ex04/exam10-6.html
+++ b/web/app/src/main/resources/static/javascript/ex04/exam10-6.html
@@ -9,27 +9,32 @@
 <script>
 "use strict"
 
+var obj0 = new Object(); //Object()생성자로 초기화시킨 객체
+console.log(obj0);
+console.log("-------------");
+//--> 아웃풋 : [[Prototype]]: Object
+// 객체 출력한 아웃풋이 "{}"만 출력된다면 new Object()에 의해 초기화된 객체를 의미한다
+
 // 함수를 생성자처럼 사용하기  
 function createScore() {
 	// 자바스크립트는 생성자를 정의하는 문법이 따로 없다. 
 	// 일반 함수를 생성자처럼 사용한다.
 	// => new 명령을 사용하여 외부에서 빈 객체를 생성한 후, 
-	// => 일반 함수를 호출한다.
-	// => 외부에서 생성한 객체는 this를 통해 접근할 수 있다.
-	// => 만약 new 명령없이 이 함수를 호출한다면 this는 undefined 이다.
-	console.log(this);
+	// => 일반 함수를 호출하면 생성자가 된다.
 }
+//return 값이 없기 때문에 함수를 호출하게되면 undefined가 출력됨.
 
+var obj1 = new createScore();  //create생성자로 초기화한 객체
 //일반 함수를 생성자로서 사용한다는 의미?
 // => new 명령 다음에 즉시 호출하는 것을 의미한다.
 // => 예) new createScore();
-var obj1 = new createScore(); 
+console.log(obj1); //--> : createScore {} createscore생성자로 초기화한 객체를 의미.
+
 console.log("-----------------------");
 
 //일반 함수로 사용한다면 this에는 어떤 주소도 들어 있지 않다.
 var obj2 = createScore(); 
-
-
+console.log(obj2);
 </script>
 </body>
 </html>
