--- a/web/app/src/main/resources/static/css/test01_1.html
+++ b/web/app/src/main/resources/static/css/test01_1.html
@@ -29,16 +29,16 @@
   }
   
   div {
-    border-style: dashed;
-    border-width: 10px;
+    border-style: solid;
+    border-width: 2px;
     border-color: green;
     padding: 10px;
     margin: 10px;
   }
  
-  img, ul {
-    border-style: dotted;
-    margin: 0px;
+  img, ul{
+    border-style: dashed;
+    margin: 10px;
   }
 
   </style>
@@ -47,13 +47,13 @@
 
 <div id="menu">
 <img src='http://bitcamp.co.kr/img/link2.png'>
-<ul>
+<ol>
   <li>교육안내</li>
   <li>교육과정</li>
   <li>수강신청</li>
   <li>온라인상담</li>
   <li>커뮤니티</li>
-</ul>
+</ol>
 <button>로그인</button>
 <button>회원가입</button>
 </div>
