--- a/web/app/src/main/resources/static/css/test01_3.html
+++ b/web/app/src/main/resources/static/css/test01_3.html
@@ -24,13 +24,13 @@
   }
   
   .c2 {
-    color: blue;
+    color: green; 
     font-weight: bold;
     text-decoration: underline;
   }
 
   .c1, .c2 {
-    border-style: double;
+    border-style: solid;
   }
 
   </style>
