--- a/web/app/src/main/resources/static/css/test02_5.html
+++ b/web/app/src/main/resources/static/css/test02_5.html
@@ -16,6 +16,9 @@
     border-color: red;
     border-style: dashed;
   }
+  div ul {
+    background-color: rebeccapurple;
+  }
   </style>
 </head>
 <body>
