--- a/web/app/src/main/resources/static/css/test03_4.html
+++ b/web/app/src/main/resources/static/css/test03_4.html
@@ -30,12 +30,13 @@
   }
 
   a:visited {
-    color: gray;
+    color: gray;  
   }
-
+/* 현재 페이지에서 한번 방문한 적 있는 사이트 : visited */
   a:link {
     color: green;
   }
+  /* 링크의 색상 변경 */
 
   a:active {
     background-color: yellow;
