--- a/web/app/src/main/resources/static/javascript/ex04/exam10-4.html
+++ b/web/app/src/main/resources/static/javascript/ex04/exam10-4.html
@@ -9,6 +9,8 @@
 <script>
 "use strict"
 
+// 4) 객체 프로퍼티에 함수 저장 
+
 // 객체의 값을 다루는 함수를 객체에 추가한다.
 function createScore(name, kor, eng, math) {
 	var obj = new Object();
@@ -16,10 +18,10 @@ function createScore(name, kor, eng, math) {
 	obj.kor = kor;
 	obj.eng = eng;
 	obj.math = math;
-	obj.sum = function() { 
+	obj.sum = function() {
 		return this.kor + this.eng + this.math;
 	};
-	obj.aver = function() { 
+	obj.aver = function() {
 		return this.sum() / 3;
 	};
 	return obj;
@@ -31,7 +33,7 @@ scores[1] = createScore("임꺽정", 90, 90, 90);
 scores[2] = createScore("유관순", 80, 80, 80);
 
 for (var score of scores) {
-    console.log(score.name, score.kor, score.eng, score.math, 
+    console.log(score.name, score.kor, score.eng, score.math,
             score.sum(), score.aver());
 }
 
@@ -41,14 +43,9 @@ console.log("--------------------------------------------");
 scores[2].kor = 100;
 
 for (var score of scores) {
-    console.log(score.name, score.kor, score.eng, score.math, 
+    console.log(score.name, score.kor, score.eng, score.math,
     		score.sum(), score.aver());
 }
 </script>
 </body>
 </html>
-
-
-
-
-
