--- a/web/app/src/main/resources/static/css/test03_5.html
+++ b/web/app/src/main/resources/static/css/test03_5.html
@@ -14,36 +14,39 @@
         대상자[속성명] {...}
    */
   h1 {
+    border: 1px solid rebeccapurple;
     padding-left: 10px;
   }
   
-  /* 첫 번째 대상을 지정한다 */
+  /* 첫 번째 대상을 지정한다 . 부모태그로부터 1번째*/
   h1:nth-child(1) { 
     background-color: gray;
   }
+  /*부모로부터 10번째태그*/
   h1:nth-child(10) {
     background-color: red;
   } 
   h1:nth-child(2n) {
     border-left: 20px solid violet;
   } 
-  
+  /* 2n = 짝수번 째 */
   h1:nth-child(2n + 1) {
     border-right: 10px solid royalblue;
   }
   
-  h1:first-child {
+  2h1:first-child {
     text-decoration: underline;
   }
   
-  h1:last-child {
+  2h1:last-child {
     text-decoration: overline;
   } 
 
   </style>
 </head>
 <body>
-<p>ok</p>
+<p>ok</p> 
+<!-- p태그가 body태그의 첫번째 자식, 제목1h1태그는 2번째 자식 -->
 <h1>제목1</h1>
 <h1>제목2</h1>
 <h1>제목3</h1>
