--- a/web/app/src/main/resources/static/javascript/ex04/exam10-2.html
+++ b/web/app/src/main/resources/static/javascript/ex04/exam10-2.html
@@ -9,6 +9,8 @@
 <script>
 "use strict"
 
+// 2) 레퍼런스 배열 사용
+
 // 배열을 이용하여 여러 개의 객체를 다루기
 var scores = []; //new Array();
 scores[0] = new Object();
@@ -41,8 +43,3 @@ for (var score of scores) {
 </script>
 </body>
 </html>
-
-
-
-
-
