--- a/web/app/src/main/resources/static/javascript/ex04/exam10-5.html
+++ b/web/app/src/main/resources/static/javascript/ex04/exam10-5.html
@@ -9,17 +9,19 @@
 <script>
 "use strict"
 
-// {} 표기법을 이용하여 객체 생성과 초기화를 수행한다.  
+// 5) {}  문법을 이용하여 객체 생성
+
+// {} 표기법을 이용하여 객체 생성과 초기화를 수행한다.
 function createScore(name, kor, eng, math) {
     return {
         "name": name,
         'kor': kor,
         'eng': eng,
         math: math,
-        sum() { 
+        sum() {
             return this.kor + this.eng + this.math
         },
-        aver() { 
+        aver() {
             return this.sum() / 3
         }
     }
@@ -34,14 +36,9 @@ scores[2] = createScore("유관순", 80, 80, 80);
 scores[2].kor = 100;
 
 for (var score of scores) {
-    console.log(score.name, score.kor, score.eng, score.math, 
+    console.log(score.name, score.kor, score.eng, score.math,
     		score.sum(), score.aver());
 }
 </script>
 </body>
 </html>
-
-
-
-
-
