--- a/web/app/src/main/resources/static/javascript/ex05/exam01-1.html
+++ b/web/app/src/main/resources/static/javascript/ex05/exam01-1.html
@@ -26,6 +26,7 @@
 // => var document = new Document();
 //
 // getElementById("태그아이디")
+console.log(document.constructor.name);
 // => Element 객체 리턴
 var e1 = document.getElementById("header4");
 
