--- a/web/app/src/main/resources/static/css/test03_1.html
+++ b/web/app/src/main/resources/static/css/test03_1.html
@@ -23,18 +23,19 @@
   ul.c1.c2 {
     background-color: yellow;
   }
-
-  div#menu li.c2 {
-    display: none;
+  li.c1.c2 {
+    background-color: tomato
   }
+
+  
   </style>
 </head>
 <body>
 <div id="menu">
 <img src='http://bitcamp.co.kr/resources/images/logo/head_logo.gif'>
-<ul class="c1">
+<ul class="c1 c2">
   <li class="c1">교육안내</li>
-  <li class="c1">교육과정</li>
+  <li class="c1 c2">교육과정</li>
   <li class="c2">수강신청</li>
   <li class="c2">온라인상담</li>
   <li class="c2">커뮤니티
