생성자, 상속,DOM API

--- a/web/app/src/main/resources/static/css/testmy.html
+++ b/web/app/src/main/resources/static/css/testmy.html
@@ -23,7 +23,9 @@ margin: 0 auto;
   background-color: thistle;
   border: 1px double wheat;
 } */
-
+li:nth-child(2) {
+  background-color: greenyellow;
+}
 
   </style>
 <h1>강의계획</h1>
