--- a/web/app/src/main/resources/static/javascript/ex05/exam01-1.html
+++ b/web/app/src/main/resources/static/javascript/ex05/exam01-1.html
@@ -25,19 +25,20 @@
 // => 태그를 찾고 생성하는 것과 관련된 함수를 갖고 있다.
 // => var document = new Document();
 //
-// getElementById("태그아이디")
-console.log(document.constructor.name);
-// => Element 객체 리턴
+// Document.prototype.getElementById("태그아이디")
+// 리턴 값 : HTMLElement 하위 생성자에 의해 초기화된 객체를 리턴
 var e1 = document.getElementById("header4");
 
 console.log(e1);
 console.log(e1.name); // undefined
 console.log(e1.localName); // 태그명
 console.log(e1.constructor.name); // 객체의 생성자 이름
-
+console.log(e1 instanceof HTMLHeadingElement);// true
 console.log("----------------------------");
 
-console.log(e1 instanceof HTMLHeadingElement); // true
+
+//HTMLHeadingElement()리턴 --> 상위 생성자 : HTMLElement() --> Element() --> Node() --> EventTarget() --> Object()
+
 console.log(e1 instanceof HTMLElement); // true
 console.log(e1 instanceof Element); // true
 console.log(e1 instanceof Node); // true
