--- a/web/app/src/main/resources/static/javascript/ex04/exam11-4.html
+++ b/web/app/src/main/resources/static/javascript/ex04/exam11-4.html
@@ -25,7 +25,7 @@ console.log(obj1);
 console.log(obj2);
 console.log(obj3);
 
-console.log(obj1.toString());  // Object.prototype.toString()
+console.log(Object.prototype.toString());  // Object.prototype.toString()
 console.log(obj2.toString());  // Object.prototype.toString();
 console.log(obj3.toString());  // Object.prototype.toString();
 
