--- a/web/app/src/main/resources/static/javascript/ex05/exam04-4.html
+++ b/web/app/src/main/resources/static/javascript/ex05/exam04-4.html
@@ -29,7 +29,7 @@ var e = document.querySelector("article:first-child");
 
 // => 부모 태그를 알아낸다.
 // => Node.parentElement 또는 Node.parentNode를 사용한다.
-var parent = e.parentElement;
+var parent = e.parentElement;//부모태그 주소가 들어있다.
 
 // => 부모 태그에서 자식 태그를 제거한다.
 parent.removeChild(e);
