--- a/web/app/src/main/resources/static/javascript/ex04/exam14-2.html
+++ b/web/app/src/main/resources/static/javascript/ex04/exam14-2.html
@@ -5,37 +5,35 @@
 <title>ex04</title>
 </head>
 <body>
-<h1>객체 - 프로퍼티의 소속과 사용법</h1> 
+<h1>객체 - 프로퍼티의 소속과 사용법</h1>
 <script>
 "use strict"
-//생성자 정의
+
+// 생성자 정의
 function Score(name, kor, eng, math) {
   this.name = name;
   this.kor = kor;
   this.eng = eng;
   this.math = math;
-  
-/*
-2) 함수의 prototype 소속 프로퍼티
-*/
-  Score.prototype.sum = function() {
-    return this.kor + this.eng + this.math;
-  };
-    
-  Score.prototype.aver = function () {
-    return this.sum() /3
-    };
-  }  
+}
+
+// 2) 함수의 prototype 소속 프로퍼티
+Score.prototype.sum = function() {
+  return this.kor + this.eng + this.math;
+};
+Score.prototype.aver = function() {
+  return this.name +":"+ this.sum() / 3;
+};
+
+// 함수의 prototype 소속 프로퍼티는
+// 그 함수가 초기화시킨 객체에 대해 사용할 수 있다.
+
+var score1 = new Score("홍길동", 100, 100, 100);
+console.log(score1.sum(), score1.aver());
 
 
-var score1 = new Score("홍길동",100, 100, 100);
-// 다음 sum()과 aver()함수는 특정 객체에만 소속된다.
-console.log(score1.sum(),score1.aver());
-
-var score2 = new Score("임꺽정", 90, 90, 90)
-//score2에 소속된 함수 중에 sum()과 aver()가 없기 때문에 오류 발생.
-console.log(score2.sum(), score2.aver);
-
+var score2 = new Score("임꺽정", 90, 90, 90);
+console.log(score2.sum(), score2.aver());
 
 </script>
 </body>
