--- a/web/app/src/main/resources/static/javascript/ex05/exam02-1.html
+++ b/web/app/src/main/resources/static/javascript/ex05/exam02-1.html
@@ -24,7 +24,7 @@
 // => Element() 생성자가 추가한 프로퍼티이다.
 // => 태그의 콘텐트를 HTML 코드 그대로 리턴한다.
 // 
-var e = document.querySelector("article:first-child > p");
+var e = document.querySelector("article:nth-child(1) > p");
 console.log(e)
 console.log(e.innerHTML)
 console.log("----------------------")
