--- a/web/app/src/main/resources/static/javascript/ex05/exam04-5.html
+++ b/web/app/src/main/resources/static/javascript/ex05/exam04-5.html
@@ -26,14 +26,14 @@ var parent = document.querySelector("section");
 // 2초마다 부모 태그의 첫 번째 자식을 막내 자식으로 보낸다.
 window.setInterval(() => {
     // 첫 번째 이미지를 찾는다.
-    var img = document.querySelector("section > img:first-child");
+    var img = document.querySelector("section > img:first-child"); //section의 첫번째 img 자식을 찾는다
     
     // 찾은 이미지를 부모의 막내 자식으로 추가한다.
     // => 이미 존재하는 태그를 추가하면 또 추가되는 것이 아니라 
     //    기존 위치에서 맨 끝으로 이동하게 된다.
     parent.appendChild(img);
 }, 1000);
-
+//1초에 한번씩 호출해달라는 의미 , setInterval
 
 
 
