--- a/web/app/src/main/resources/static/javascript/ex06/exam04-2.html
+++ b/web/app/src/main/resources/static/javascript/ex06/exam04-2.html
@@ -31,26 +31,27 @@ button {padding: 30px;}
 // => false(기본) : target 또는 bubble 단계에서 호출된다. 
 document.getElementById("btn1").addEventListener("click", function(e) {
 	console.log("버튼1...");
-}, true);
+}, true); // true를 줘야 capture, target단계에서 실행된다. 안주면 target, bubble단계에서 실행된다
 
+//target, bubble 단계에서 호출되도록 설정
 document.getElementById("btn2").addEventListener("click", function(e) {
     console.log("버튼2...");
 });
 
-// 캡쳐 단계에서 호출되도록 설정한다.
+// capture, target 단계에서 호출되도록 설정한다.(true추가)
 document.getElementById("d2").addEventListener("click", function(e) {
     console.log("d2...");
-});
+}, true);
 
 //캡쳐 단계에서 호출되도록 설정한다.
 document.getElementById("d1").addEventListener("click", function(e) {
     console.log("d1...");
-});
+}, true);
 
 //캡쳐 단계에서 호출되도록 설정한다.
 document.body.addEventListener("click", function(e) {
     console.log("body...");
-}, true);
+}, true); //body에 이벤트 리스너 등록할 때는 getElementById를 쓸필요없이 document.body만 쓰면 된다.
 
 
 // 정리!
