--- a/web/app/src/main/resources/static/javascript/ex06/exam04-4.html
+++ b/web/app/src/main/resources/static/javascript/ex06/exam04-4.html
@@ -13,6 +13,9 @@ tbody tr:hover {
   color: white;
   cursor: pointer;
 }
+a {
+  border: 3px dotted plum;
+}
 </style>
 </head>
 <body>
@@ -43,7 +46,7 @@ tbody tr:hover {
     <td>800</td>
   </tr>
   <tr data-no="300">
-    <td>3</td> 
+    <td>3</td>    
     <td><a href="#" data-no="3">제목입니다.</a></td>
     <td>유관순</td>
     <td>2019-4-29</td>
