--- a/web/app/src/main/resources/static/javascript/ex06/exam01-4.html
+++ b/web/app/src/main/resources/static/javascript/ex06/exam01-4.html
@@ -19,43 +19,51 @@
 "use strict"
 
 var el = document.querySelectorAll(".btn1");
+var el2 = document.querySelectorAll(".btn2");
 
 // querySelectorAll()의 리턴 값은 NodeList 이다.
 // 태그 객체가 아니다. 
 // 따라서 addEventListener() 함수가 없다.
-/*
-el.addEventListener("click", () => {
-    console.log(this);
-});
-*/
+
+// el.addEventListener("click", () => {
+//     console.log(this);
+// });
+
 
 // 또한 onclick 프로퍼티도 없다. 
 // 따라서 다음 코드는 의미 없다. 
-/*
+
 el.onclick = () => {
     console.log(this);
-};
-*/
+};  //실행할 때 에러는 안뜨지만 호출이안된다.
+    // Nodelist도 객체이기 때문에 el객체에 onclick프로퍼티를 추가한 것이다.
+
 
 // 다음과 같이 각 태그 객체에 리스너를 추가하던가!
 /*
 for (var e of el) {
 	e.onclick = function() {
 		console.log(this);
-	}
+	} //Nodelist에서 일일이 태그를 꺼내서 추가해야한다.
 }
 */
 
 // 다음처럼 한 개의 함수를 정의한 후에 
 // 각 태그에 리스너로 등록하던가!
-/*
+
 function f1() {
 	console.log(this);
 }
 for (var e of el) {
 	  e.onclick = f1
 }
-*/
+function f2() {
+	console.log(this);
+}
+for (var e of el2) {
+	  e.onclick = f2
+}
+
 
 
 </script>
