--- a/web/app/src/main/resources/static/javascript/ex06/exam06-1.html
+++ b/web/app/src/main/resources/static/javascript/ex06/exam06-1.html
@@ -7,7 +7,8 @@
 <body>
 <h1>이벤트 - a 태그의 기본 동작을 중단시키기</h1>
 <p>a 태그의 링크를 클릭하면 href 에 등록한 URL을 요청하는 것이 
-a 태그의 기본 동작이다.</p>
+a 태그의 기본 동작이다.</p> 
+<!-- URL요청하게되면 그 사이트로 들어가지게 된다, 이 동작을 취소하게되면 링크를 클릭해도 사이트로 들어가지지 않는다. -->
 <a href="http://www.daum.net" 
    onclick="alert('OK!')">a 태그의 기본 동작 계속</a><br>
 
@@ -43,11 +44,12 @@ function f1() {
 
 document.querySelector("#link3").onclick = function() {
   alert("OK!");
-  return false; // false를 리턴하면 a 태그의 기본 동작을 취소한다.
+  return false; // false를 리턴하면 a 태그의 기본 동작을 취소한다. false를 지정하지 않으면 link3에 등록된 링크로 들어가지게 된다.
 }
 
 document.querySelector("#link4").onclick = function(e) {
-  e.preventDefault(); // a 태그의 기본 동작을 비활성화 한다.
+  e.preventDefault(); 
+  // a 태그의 기본 동작을 비활성화 한다. 리스너 호출이 끝난 후 서버에 요청하지 않는다. = return false
   alert("OK!");
 }
 
