--- a/web/app/src/main/resources/static/javascript/ex06/exam06-3.html
+++ b/web/app/src/main/resources/static/javascript/ex06/exam06-3.html
@@ -32,7 +32,7 @@ document.querySelector("#form1").onsubmit = () => {
   // submit 타입의 버튼을 클릭하면 onsubmit 으로 등록한 함수가 호출된다.
   // 여기에서 입력 폼 값을 검증하는 일을 한다.
   //
-  var name = document.querySelector("#name");
+  var name = document.querySelector("#name1");
   if (name.value == "") {
     alert("필수 입력 항목이 비어 있습니다.");
     return false; // false를 리턴하면 입력 폼의 값을 서버에 제출하지 않는다. 
@@ -41,7 +41,7 @@ document.querySelector("#form1").onsubmit = () => {
   
   // true를 리턴하거나 아무것도 리턴하지 않으면 원래대로 
   // 입력 폼의 값을 서버에 제출한다. 즉 HTTP 요청을 수행한다.
-}
+};
 
 document.querySelector("#btn2").onclick = () => {
   var name = document.querySelector("#name2");
