--- a/mylist-boot/app/src/main/resources/static/index.html
+++ b/mylist-boot/app/src/main/resources/static/index.html
@@ -10,6 +10,8 @@
 <ul>
   <li><a href="contact/index.html">연락처</a></li>
   <li><a href="todo/index.html">To-do</a></li>
+  <li><a href="board/index.html">Board</a></li>
+
 </ul>
 </body>
 </html>
