--- a/mylist-boot/app/src/main/resources/static/index.html
+++ b/mylist-boot/app/src/main/resources/static/index.html
@@ -11,6 +11,8 @@
   <li><a href="contact/index.html">연락처</a></li>
   <li><a href="todo/index.html">To-do</a></li>
   <li><a href="board/index.html">Board</a></li>
+  <li><a href="board2/index.html">Board2</a></li>
+  <li><a href="board3/index.html">Board3</a></li>
 
 </ul>
 </body>
