--- a/mylist-boot/app/src/main/resources/static/board2/view.html
+++ b/mylist-boot/app/src/main/resources/static/board2/view.html
@@ -49,7 +49,7 @@
   var xCreatedDate = document.querySelector("#x-createdDate");
 
   // 3) 서버에서 데이터 가져오기
-  fetch(`/board2/get?email=${index}`)
+  fetch(`/board2/get?index=${index}`)
     .then(function(response) {
       return response.json();
     })
@@ -57,8 +57,8 @@
      
 
       // 4) 연락처 상세 정보를 화면에 출력한다.
-      xTitle.value = board.title;
-      xContent.value = board.content;
+      xTitle.value = board2.title;
+      xContent.value = board2.content;
       xViewCount.innerHTML = board2.viewCount;
       xCreatedDate.innerHTML = board2.createdDate;
     });
@@ -69,7 +69,7 @@
       return;
     }
 
-    fetch(`/board2/update?index=${index}&content=${xContent.value}`)
+    fetch(`/board2/update?index=${index}&title=${xTitle.value}&content=${xContent.value}`)
       .then(function(response) {
         return response.text();
       })
