--- a/mylist-boot/app/src/main/resources/static/board2/index.html
+++ b/mylist-boot/app/src/main/resources/static/board2/index.html
@@ -1,42 +1,42 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-<head>
-  <meta charset="utf-8">
-  <title>게시글2</title>
-</head>
-<body>
-<h1>게시글2</h1>
-<a href="form.html">새 게시글2</a>
-<table id="x-board-table" border="1">
-<thead>
-  <tr>
-    <th>제목</th>
-    <th>조회수</th>
-    <th>날짜</th>
-  </tr>
-</thead>
-<tbody>
-</tbody>
-</table>
+  <head>
+    <meta charset="utf-8" />
+    <title>게시글2</title>
+  </head>
+  <body>
+    <h1>게시글2</h1>
+    <a href="form.html">새 게시글2</a>
+    <table id="x-board-table" border="1">
+      <thead>
+        <tr>
+          <th>제목</th>
+          <th>조회수</th>
+          <th>날짜</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
 
-<script type="text/javascript">
-  var tbody = document.querySelector("#x-board-table tbody")
+    <script type="text/javascript">
+      var tbody = document.querySelector('#x-board-table tbody');
 
-  fetch("/board2/list")
-    .then(function(response) {
-      return response.json();
-    })
-    .then(function(boards) {
-      console.log(boards);
-      for (var i = 0; i < boards.length; i++) {
-        var board2 = boards[i];
-        var tr = document.createElement("tr");
-        tr.innerHTML = `<td><a href="view.html?index=${i}">${board2.title}</a></td>
+      fetch('/board2/list')
+        .then(function (response) {
+          console.log(response);
+          return response.json();
+        })
+        .then(function (boards) {
+          console.log(boards);
+          for (var i = 0; i < boards.length; i++) {
+            var board2 = boards[i];
+            var tr = document.createElement('tr');
+            tr.innerHTML = `<td><a href="view.html?index=${i}">${board2.title}</a></td>
         <td>${board2.viewCount}</td>
         <td>${board2.createdDate}</td>`;
-        tbody.appendChild(tr);
-      }
-    });
-</script>
-</body>
+            tbody.appendChild(tr);
+          }
+        });
+    </script>
+  </body>
 </html>
