--- a/mylist-boot/app/src/main/resources/static/index.html
+++ b/mylist-boot/app/src/main/resources/static/index.html
@@ -13,6 +13,7 @@
   <li><a href="board/index.html">Board</a></li>
   <li><a href="board2/index.html">Board2</a></li>
   <li><a href="board3/index.html">Board3</a></li>
+  <li><a href="book/index.html">Book</a></li>
 
 </ul>
 </body>
