--- a/mylist-boot/app/src/main/resources/static/book/index.html
+++ b/mylist-boot/app/src/main/resources/static/book/index.html
@@ -39,7 +39,9 @@
         <td>${book.author}</td>
         <td>${book.press}</td>
         <td>${book.page}</td>
-        <td>${book.price}</td>`;
+        <td>${book.price}</td>
+        <td>${book.readDate}</td>
+        <td>${book.feed}</td>`;
             tbody.appendChild(tr);
           }
         });
