--- a/mylist-boot/app/src/main/resources/static/book/form.html
+++ b/mylist-boot/app/src/main/resources/static/book/form.html
@@ -1,47 +1,50 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-<head>
-  <meta charset="utf-8">
-  <title>게시글2</title>
-</head>
-<body>
+  <head>
+    <meta charset="utf-8" />
+    <title>책 정보</title>
+  </head>
+  <body>
+    <h1>책 정보입력</h1>
 
-<h1>게시글2</h1>
+    <form>
+      제목: <input id="x-title" type="text" /><br />
+      작가: <input id="x-author" type="text" /><br />
+      출판사: <input id="x-press" type="text" /><br />
+      페이지: <input id="x-page" type="text" /><br />
+      가격: <input id="x-price" type="text" /><br />
+      읽은 날짜: <input id="x-date" type="date" /><br />
+      독후감: <textarea id="x-feed" cols="60" rows="10"></textarea><br />
 
-<form>
-제목*: <input id="x-title" type="text"><br>
-내용*: <textarea id="x-content" cols="60" rows="10"></textarea><br>
+      <button id="x-add-btn" type="button">등록</button>
+      <button id="x-cancel-btn" type="button">취소</button>
+    </form>
 
-별표(*) 항목은 필수 입력입니다.<br>
-<button id="x-add-btn" type="button">등록</button>
-<button id="x-cancel-btn" type="button">취소</button>
-</form>
+    <script type="text/javascript">
+      var xTitle = document.querySelector('#x-title');
+      var xAuthor = document.querySelector('#x-author');
+      var xPress = document.querySelector('#x-press');
+      var xPage = document.querySelector('#x-page');
+      var xPrice = document.querySelector('#x-price');
+      var xDate = document.querySelector('#x-date');
+      var xFeed = document.querySelector('#x-feed');
 
-<script type="text/javascript">
-  var xTitle = document.querySelector("#x-title");
-  var xContent = document.querySelector("#x-content");
-  
+      document.querySelector('#x-add-btn').onclick = function () {
+        fetch(
+          `/book/add?title=${xTitle.value}&Author=${xAuthor.value}&Press=${xPress.value}&Page=${xPage.value}&price=${xPrice.value}&readDate=${xDate.value}&feed=${xFeed.value}`
+        )
+          .then(function (response) {
+            return response.text();
+          })
+          .then(function (text) {
+            console.log(text);
+            location.href = 'index.html';
+          });
+      };
 
-  document.querySelector("#x-add-btn").onclick = function() {
-    if (xTitle.value == "" || xContent.value == "") {
-      window.alert("필수 입력 항목이 비어 있습니다.");
-      return;
-    }
-
-    fetch(`/board2/add?title=${xTitle.value}&content=${xContent.value}`)
-      .then(function(response) {
-        return response.text();
-      })
-      .then(function(text) {
-        console.log(text);
-        location.href = "index.html";
-      });
-  };
-
-  document.querySelector("#x-cancel-btn").onclick = function() {
-    window.location.href = "index.html";
-  };
-</script>
-
-</body>
+      document.querySelector('#x-cancel-btn').onclick = function () {
+        window.location.href = 'index.html';
+      };
+    </script>
+  </body>
 </html>
