--- a/mylist-boot/app/src/main/resources/static/index.html
+++ b/mylist-boot/app/src/main/resources/static/index.html
@@ -14,6 +14,7 @@
   <li><a href="board2/index.html">Board2</a></li>
   <li><a href="board3/index.html">Board3</a></li>
   <li><a href="book/index.html">Book</a></li>
+  <li><a href="book2/index.html">Book</a></li>
 
 </ul>
 </body>
