--- a/mylist-boot/app/src/main/resources/static/board/view.html
+++ b/mylist-boot/app/src/main/resources/static/board/view.html
@@ -3,27 +3,17 @@
 <head>
   <meta charset="utf-8">
   <title>게시글</title>
-  <style>
-    #x-viewcount {
-      display: none;
-    }
-    #x-createddate {
-      display: none;
-    }
-  </style>
 </head>
 <body>
 
 <h1>게시글 상세</h1>
 
 <form>
-제목: <input id="x-title" type="text" ><br>
-내용: <textarea name="" id="x-content" cols="30" rows="10"></textarea><br>
- <input id="x-viewcount" type="text" readonly><br>
- <input id="x-createddate" type="text" readonly><br>
-
-
-
+제목*: <input id="x-title" type="text"><br>
+내용*: <textarea id="x-content" cols="60" rows="10"></textarea><br>
+조회수: <span id="x-viewCount"></span><br>
+등록일: <span id="x-createdDate"></span><br>
+별표(*) 항목은 필수 입력입니다.<br>
 <button id="x-update-btn" type="button">변경</button>
 <button id="x-delete-btn" type="button">삭제</button>
 <button id="x-cancel-btn" type="button">취소</button>
@@ -37,7 +27,7 @@
 
   if (arr.length == 1) {
     alert("요청 형식이 옳바르지 않습니다.")
-    throw "쿼리스트링이 없습니다.";
+    throw "URL 형식 오류!";
   }
 
   var qs = arr[1];
@@ -45,23 +35,21 @@
 
   // 2) 쿼리 스트링에서 email 값을 추출한다.
   var params = new URLSearchParams(qs);
-  var title = params.get("title");
+  var index = params.get("index");
 
-  if (title == null) {
-    alert("제목값이 없습니다!");
+  if (index == null) {
+    alert("게시물 번호가 없습니다.");
     throw "파라미터 오류!";
   }
-  console.log(title);
+  console.log(index);
 
   var xTitle = document.querySelector("#x-title");
   var xContent = document.querySelector("#x-content");
-  var xViewCount = document.querySelector("#x-viewcount");
-  var xCreatedDate = document.querySelector("#x-createddate");
+  var xViewCount = document.querySelector("#x-viewCount");
+  var xCreatedDate = document.querySelector("#x-createdDate");
 
-  
-  
   // 3) 서버에서 데이터 가져오기
-  fetch(`/board/get?title=${title}`)
+  fetch(`/board/get?index=${index}`)
     .then(function(response) {
       return response.json();
     })
@@ -69,17 +57,17 @@
       // 4) 연락처 상세 정보를 화면에 출력한다.
       xTitle.value = board.title;
       xContent.value = board.content;
-      xViewCount.value = board.viewCount;
-      xCreatedDate.value = board.createdDate
+      xViewCount.innerHTML = board.viewCount;
+      xCreatedDate.innerHTML = board.createdDate;
     });
 
   document.querySelector("#x-update-btn").onclick = function() {
-    if (xTitle.value == "" ) {
+    if (xTitle.value == "" || xContent.value == "") {
       window.alert("필수 입력 항목이 비어 있습니다.");
       return;
     }
 
-    fetch(`/board/update?title=${xTitle.value}&content=${xContent.value}&viewCount=${xViewCount.value}&createdDate=${xCreatedDate.value}`)
+    fetch(`/board/update?index=${index}&title=${xTitle.value}&content=${xContent.value}`)
       .then(function(response) {
         return response.text();
       })
@@ -91,11 +79,10 @@
 
   document.querySelector("#x-cancel-btn").onclick = function() {
     window.location.href = "index.html";
-    
   };
 
   document.querySelector("#x-delete-btn").onclick = function() {
-    fetch(`/board/delete?title=${title}`)
+    fetch(`/board/delete?index=${index}`)
       .then(function(response) {
         return response.json();
       })
