--- a/mylist-boot/app/src/main/resources/static/board/form.html
+++ b/mylist-boot/app/src/main/resources/static/board/form.html
@@ -2,15 +2,16 @@
 <html lang="en" dir="ltr">
 <head>
   <meta charset="utf-8">
-  <title>Board</title>
+  <title>게시글</title>
 </head>
 <body>
 
-<h1>새 게시물</h1>
+<h1>새 게시글</h1>
 
 <form>
-  제목: <input id="x-title" type="text"><br>
-  내용: <br><textarea name="" id="x-content" cols="30" rows="10"></textarea><br>
+제목*: <input id="x-title" type="text"><br>
+내용*: <textarea id="x-content" cols="60" rows="10"></textarea><br>
+별표(*) 항목은 필수 입력입니다.<br>
 <button id="x-add-btn" type="button">등록</button>
 <button id="x-cancel-btn" type="button">취소</button>
 </form>
@@ -18,12 +19,9 @@
 <script type="text/javascript">
   var xTitle = document.querySelector("#x-title");
   var xContent = document.querySelector("#x-content");
-  const today = new Date();
-  const createdDate = today.toLocaleDateString();
-  console.log(createdDate)
-  
+
   document.querySelector("#x-add-btn").onclick = function() {
-    if (xTitle.value == "") {
+    if (xTitle.value == "" || xContent.value == "") {
       window.alert("필수 입력 항목이 비어 있습니다.");
       return;
     }
@@ -39,7 +37,6 @@
   };
 
   document.querySelector("#x-cancel-btn").onclick = function() {
-    
     window.location.href = "index.html";
   };
 </script>
