--- a/mylist-boot/app/src/main/resources/static/board/index.html
+++ b/mylist-boot/app/src/main/resources/static/board/index.html
@@ -1,41 +1,51 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8" />
-    <title>게시판</title>
-  </head>
-  <body>
-    <h1>게시판</h1>
-    <a href="form.html">새 게시글</a>
-    <table id="x-contact-table" border="1">
-      <thead>
-        <tr>
-          <th>제목</th>
-          <th>내용</th>
-          <th>조회수</th>
-          <th>날짜</th>
-        </tr>
-      </thead>
-      <tbody></tbody>
-    </table>
+<head>
+  <meta charset="utf-8">
+  <title>게시글</title>
+</head>
+<body>
+<h1>게시글</h1>
+<a href="form.html">새 게시글</a>
+<table id="x-board-table" border="1">
+<thead>
+  <tr>
+    <th>제목</th>
+    <th>조회수</th>
+    <th>등록일</th>
+  </tr>
+</thead>
+<tbody>
+</tbody>
+</table>
 
-    <script type="text/javascript">
-      var tbody = document.querySelector('#x-contact-table tbody');
-      fetch('/board/list')
-        .then(function (response) {
-          return response.json();
-        })
-        .then((data) => {
-          console.log(data);
-          for (var board of data) {
-            var tr = document.createElement('tr');
-            tr.innerHTML = `<td><a href="view.html?title=${board.title}">${board.title}</a></td>
-        <td>${board.content}</td>
+<script type="text/javascript">
+  var tbody = document.querySelector("#x-board-table tbody")
+
+  fetch("/board/list")
+    .then(function(response) {
+      return response.json();
+    })
+    .then(function(boards) {
+      console.log(boards);
+      for (var i = 0; i < boards.length; i++) {
+        var board = boards[i];
+        var tr = document.createElement("tr");
+        tr.innerHTML = `<td><a href="view.html?index=${i}">${board.title}</a></td>
         <td>${board.viewCount}</td>
         <td>${board.createdDate}</td>`;
-            tbody.appendChild(tr);
-          }
-        });
-    </script>
-  </body>
+        tbody.appendChild(tr);
+      }
+    });
+</script>
+
+
+
+
+
+
+
+
+
+</body>
 </html>
